Fix info_input gap between label and input

--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 :root {
     --surface-0: hsl(126, 30%, 10%);
-    --surface-1: hsl(125, 20%, 43%, 0.15);
-    --surface-2: hsl(125, 15%, 67%, 0.1);
+    --surface-1: hsla(125, 20%, 43%, 0.15);
+    --surface-2: hsla(125, 15%, 67%, 0.1);
     --text-1: hsl(120, 10%, 95%);
     --text-2: hsl(125, 10%, 75%);
     --required: hsla(5, 80%, 60%, 0.8);
     --accent: hsl(126, 61%, 80%);
-    --border: 1px solid hsl(125, 20%, 80%, 0.2);
+    --border: 1px solid hsla(125, 20%, 80%, 0.2);
 }
 
 * {
@@ -71,7 +71,7 @@ form {
 .info_input p {
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
+    margin-bottom: 0.8rem;
 }
 
 label {
